--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@supabase/supabase-js": "^2.89.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.26",
-    "next": "^15.3.2",
+    "next": "^16.1.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.12",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-easy-crop": "^5.5.6"
   },
   "devDependencies": {
